# libnereon

./: .cirrus.yml  .gitattributes  .gitignore  .travis.yml  Brewfile  CMakeLists.txt  Makefile.am  README.adoc  README.md  build_macos.sh  configure.ac  default.nix  flake.nix  nereon_config.h.in
.github/workflows/: macos.yml  msys.yml  nix.yml  ubuntu.yml  windows-msys.yml
doc/: NOS.example  README_examples.adoc  README_examples.md
nix/: no-download.patch
src/: CMakeLists.txt  Makefile.am  cfg.c  cfg.h  cli.c  cli.h  cmdline.c  cmdline.h  common.h  ctx.c  ctx.h  err.c  err.h  hcl.c  hcl.h  mconfig.c  mconfig.h  meta.c  meta.h  nereon.c  nereon.h  noc.c  noc.h  nos.c  nos.h  util.c  util.h
tests/: CMakeLists.txt  Makefile.am  cfg.hcl  cfg_test.c  cfg_test1.c  cfg_test2.c  cli_test.c  cmdline.c  cmdline.hcl  noc_test.c  nos_parser.c  nos_test.c  nos_test_multi.c  rtr2.conf  rtr2_conf_test.c  rtr2_conf_test.h  rvc.nos  rvd.nos  test_util.c  test_util.h  ucl_test.c
tools/: CMakeLists.txt  Makefile.am  json2noc.c  nos2cc.c  nos_to_cc.c
